--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,14 @@ body {
     margin-top: 100px;
 }
 
+.cards-home-list{
+    display: flex;
+    gap: 30px;
+}
+
 
 .cards-home-item {
+    flex: 0 1 calc((100% - 30px * 2) / 3);
     border-radius: 30px;
     overflow: hidden;
 }
@@ -57,6 +63,11 @@ align-items: center;
 .card-body {
     background-color: var(--white-color);
     padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+
 }
 .cards-home-body {
 
@@ -81,4 +92,15 @@ margin-bottom: 20px;
 height: 2px;
 width: 50%;
 background-color: var(--grey-color);
+}
+.cards-home-button {
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    padding: 20px 30px;
+    border-radius: 20px;
+    transition: 0.3s ease 0s ;
+}
+
+.cards-home-button:hover {
+    background-color: var(--hover-blue-color);
 }
